--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,9 +18,11 @@ pool:
 steps:
 - task: Cache@2
   inputs:
-    key: '.stack'
-    restoreKeys: '.stack'
+    key: 'stack | "$(Agent.OS)" | package.yaml | stack.yaml'
     path: $(STACK_CACHE_FOLDER)
+    restoreKeys: 'stack | "$(AGENT.OS)"'
+  displayName: Cache .stack
+
 
 - script: |
     mkdir -p ~/.local/bin
