--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@
 # named azure-pipelines.yml
 
 variables:
-  STACK_WORK_CACHE_FOLDER: $(Build.SourcesDirectory)/.stack-work
+  STACK_CACHE_FOLDER: /home/vsts/.stack
 
 # Choose a agent virtual image
 pool:
@@ -19,7 +19,7 @@ steps:
 - task: Cache@2
   inputs:
     key: 'stack | "$(Agent.OS)" | package.yaml | stack.yaml'
-    path: $(STACK_WORK_CACHE_FOLDER)
+    path: $(STACK_CACHE_FOLDER)
     restoreKeys: 'stack | "$(AGENT.OS)"'
   displayName: Cache .stack-work
 
