--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ pool:
 steps:
 - task: Cache@2
   inputs:
-    key: 'clear_cache | stack | "$(Agent.OS)" | package.yaml | stack.yaml'
+    key: 'stack | "$(Agent.OS)" | package.yaml | stack.yaml'
     path: $(STACK_CACHE_FOLDER)
     restoreKeys: 'stack | "$(AGENT.OS)"'
   displayName: Cache .stack
